<resources>
    <string name="app_name">Exponentials App, featuring Kona Izumi, from Lucky Star</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="textview"></string>
    <string name="kona_izumi_from_lucky_star">Kona Izumi, from Lucky Star.</string>
    <string name="equation">Values:</string>
    <string name="konaText">Click me, Nii-Sama!~~</string>
    <string name="initial_value_tap">100</string>
    <string name="precentRemoved">10</string>
</resources>